# texprep

./: CHANGELOG  INSTALL  LICENSE  README  build.sh  texprep.cabal
src/: Main.hs  TeXPrep.hs  texprep.1  texprep.conf.hs
src/TeXPrep/: Cmd.hs  Core.hs
