name:                  texprep
version:               0.1
description:           Slightly automatic preparation of LaTeX for OO/InD/…
synopsis:              LaTeX to Odt converter
category:              Utils
license:               GPL
license-file:          LICENSE
author:                Kamil Stachowski
maintainer:            kamil (a full stop) stachowski (an at sign) gmail (a full stop) com
build-type:            Simple
stability:             Experimental
-- cabal-version:         >=1.16
cabal-version:         >=1.14
tested-with:           GHC == 7.6.3
extra-source-files:    CHANGELOG, INSTALL, README, src/texprep.1, src/texprep.conf.hs

executable texprep
    buildable:         True
    main-is:           Main.hs
    -- build-depends:     base, directory>=1.2.0.1, dyre>=0.8.11, filepath>=1.3.0.1, parsec>=3.1.3
    build-depends:     base, directory>=1.1.0.2, dyre>=0.8.7, filepath>=1.3.0.0, parsec>=3.1.2
    default-language:  Haskell2010
    hs-source-dirs:    src

library
    buildable:         True
    -- build-depends:     base, directory>=1.2.0.1, dyre>=0.8.11, filepath>=1.3.0.1, parsec>=3.1.3
    build-depends:     base, directory>=1.1.0.2, dyre>=0.8.7, filepath>=1.3.0.0, parsec>=3.1.2
    exposed-modules:   TeXPrep, TeXPrep.Cmd, TeXPrep.Core
    default-language:  Haskell2010
    hs-source-dirs:    src
